--- a/mainAdministrador/administrador.html
+++ b/mainAdministrador/administrador.html
@@ -4,209 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Panel de Administrador</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: Arial, sans-serif;
-      }
-      body {
-        display: flex;
-        height: 100vh;
-        background: #fff;
-      }
-
-      /* Sidebar */
-      .sidebar {
-        width: 220px;
-        background: #f1c40f;
-        color: #000;
-        display: flex;
-        flex-direction: column;
-        padding: 20px;
-        position: fixed;
-        left: 0;
-        top: 0;
-        height: 100%;
-        transform: translateX(0);
-        transition: transform 0.3s ease;
-        z-index: 1000;
-      }
-      .sidebar h2 {
-        margin-bottom: 30px;
-        text-align: center;
-      }
-      .sidebar a {
-        color: #000;
-        text-decoration: none;
-        margin: 10px 0;
-        padding: 10px;
-        display: block;
-        border-radius: 5px;
-        transition: background 0.3s;
-      }
-      .sidebar a:hover {
-        background: #f39c12;
-      }
-      .sidebar .close-btn {
-        display: none;
-        font-size: 22px;
-        background: transparent;
-        border: none;
-        color: #000;
-        cursor: pointer;
-        margin-bottom: 15px;
-        text-align: left;
-      }
-
-      /* Main */
-      .main {
-        flex: 1;
-        margin-left: 220px;
-        display: flex;
-        flex-direction: column;
-        transition: margin-left 0.3s ease;
-        width: 100%;
-        background: #fff;
-      }
-      .header {
-        background: #fff;
-        padding: 15px 20px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        border-bottom: 1px solid #ddd;
-        position: sticky;
-        top: 0;
-        z-index: 500;
-      }
-      .header .menu-btn {
-        font-size: 24px;
-        cursor: pointer;
-        display: none;
-      }
-      .header .logout {
-        background: #e74c3c;
-        color: #fff;
-        border: none;
-        padding: 8px 12px;
-        border-radius: 5px;
-        cursor: pointer;
-      }
-
-      .content {
-        padding: 20px;
-        flex: 1;
-        overflow-y: auto;
-      }
-
-      /* Tablas */
-      .table-container {
-        margin-top: 20px;
-      }
-      .table-container .actions {
-        margin-bottom: 15px;
-      }
-      .table-container button {
-        margin-right: 10px;
-        padding: 8px 12px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-      }
-      .add-btn {
-        background: #2ecc71;
-        color: white;
-      }
-      .config-btn {
-        background: #2980b9;
-        color: white;
-      }
-      .delete-btn {
-        background: #e74c3c;
-        color: white;
-      }
-
-      table {
-        width: 100%;
-        border-collapse: collapse;
-        background: #fff;
-        border-radius: 10px;
-        overflow: hidden;
-      }
-      th,
-      td {
-        padding: 12px;
-        text-align: left;
-        border-bottom: 1px solid #ddd;
-      }
-      th {
-        background: #f1c40f;
-        color: #000;
-      }
-      tr:hover {
-        background: #f9f9f9;
-      }
-      .delete-x {
-        color: red;
-        font-weight: bold;
-        cursor: pointer;
-        margin-left: 10px;
-        display: none;
-      }
-
-      /* Modal */
-      .modal {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.5);
-        justify-content: center;
-        align-items: center;
-        z-index: 2000;
-      }
-      .modal-content {
-        background: #fff;
-        padding: 20px;
-        border-radius: 10px;
-        width: 300px;
-        text-align: center;
-      }
-      .modal-content input {
-        width: 90%;
-        padding: 8px;
-        margin: 8px 0;
-      }
-      .modal-content button {
-        margin-top: 10px;
-        padding: 8px 12px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-      }
-
-      @media (max-width: 768px) {
-        .sidebar {
-          transform: translateX(-100%);
-        }
-        .sidebar.open {
-          transform: translateX(0);
-        }
-        .sidebar .close-btn {
-          display: block;
-        }
-        .main {
-          margin-left: 0;
-        }
-        .header .menu-btn {
-          display: block;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="styles/administrador.css" />
   </head>
   <body>
     <!-- Sidebar -->
@@ -231,7 +29,24 @@
         <!-- Dashboard -->
         <div id="dashboard" class="section">
           <h2>📊 Panel de métricas</h2>
-          <p>Aquí podrías tener tus gráficas.</p>
+          <div class="cards">
+            <div class="card">
+              <h3>Total Usuarios</h3>
+              <p id="total-users">0</p>
+            </div>
+            <div class="card">
+              <h3>Total Productos</h3>
+              <p id="total-products">0</p>
+            </div>
+            <div class="card">
+              <h3>Stock Total</h3>
+              <p id="total-stock">0</p>
+            </div>
+            <div class="card">
+              <h3>Valor Inventario</h3>
+              <p id="total-value">$0</p>
+            </div>
+          </div>
         </div>
 
         <!-- Usuarios -->
@@ -306,143 +121,6 @@
       </div>
     </div>
 
-    <script>
-      // Datos iniciales
-      let users = [
-        {
-          id: 1,
-          nombre: "Juan Pérez",
-          email: "juan@example.com",
-          rol: "Admin",
-        },
-        {
-          id: 2,
-          nombre: "María Gómez",
-          email: "maria@example.com",
-          rol: "Usuario",
-        },
-      ];
-      let products = [
-        { id: 101, nombre: "Zapatillas", precio: "$45.000", stock: 15 },
-        { id: 102, nombre: "Polera", precio: "$12.000", stock: 30 },
-      ];
-
-      let deleteMode = { user: false, product: false };
-      let currentModalType = null;
-
-      // Render tablas
-      function renderUsers() {
-        const tbody = document.querySelector("#users-table tbody");
-        tbody.innerHTML = "";
-        users.forEach((u) => {
-          const tr = document.createElement("tr");
-          tr.innerHTML = `
-        <td>${u.id}</td>
-        <td>${u.nombre}</td>
-        <td>${u.email}</td>
-        <td>${u.rol} <span class="delete-x" onclick="deleteUser(${u.id})">❌</span></td>
-      `;
-          if (deleteMode.user)
-            tr.querySelector(".delete-x").style.display = "inline";
-          tbody.appendChild(tr);
-        });
-      }
-      function renderProducts() {
-        const tbody = document.querySelector("#products-table tbody");
-        tbody.innerHTML = "";
-        products.forEach((p) => {
-          const tr = document.createElement("tr");
-          tr.innerHTML = `
-        <td>${p.id}</td>
-        <td>${p.nombre}</td>
-        <td>${p.precio}</td>
-        <td>${p.stock} <span class="delete-x" onclick="deleteProduct(${p.id})">❌</span></td>
-      `;
-          if (deleteMode.product)
-            tr.querySelector(".delete-x").style.display = "inline";
-          tbody.appendChild(tr);
-        });
-      }
-
-      // Eliminar
-      function toggleDeleteMode(type) {
-        deleteMode[type] = !deleteMode[type];
-        if (type === "user") renderUsers();
-        else renderProducts();
-      }
-      function deleteUser(id) {
-        users = users.filter((u) => u.id !== id);
-        renderUsers();
-      }
-      function deleteProduct(id) {
-        products = products.filter((p) => p.id !== id);
-        renderProducts();
-      }
-
-      // Modal
-      function openModal(type) {
-        currentModalType = type;
-        document.getElementById("modal").style.display = "flex";
-        if (type === "user") {
-          document.getElementById("modal-title").innerText = "Añadir Usuario";
-          document.getElementById("field1").placeholder = "Nombre";
-          document.getElementById("field2").placeholder = "Email";
-          document.getElementById("field3").placeholder = "Rol";
-        } else {
-          document.getElementById("modal-title").innerText = "Añadir Producto";
-          document.getElementById("field1").placeholder = "Nombre";
-          document.getElementById("field2").placeholder = "Precio";
-          document.getElementById("field3").placeholder = "Stock";
-        }
-        document.getElementById("field1").value = "";
-        document.getElementById("field2").value = "";
-        document.getElementById("field3").value = "";
-      }
-      function closeModal() {
-        document.getElementById("modal").style.display = "none";
-      }
-      function saveItem() {
-        if (currentModalType === "user") {
-          const newUser = {
-            id: Date.now(),
-            nombre: document.getElementById("field1").value,
-            email: document.getElementById("field2").value,
-            rol: document.getElementById("field3").value,
-          };
-          users.push(newUser);
-          renderUsers();
-        } else {
-          const newProduct = {
-            id: Date.now(),
-            nombre: document.getElementById("field1").value,
-            precio: document.getElementById("field2").value,
-            stock: document.getElementById("field3").value,
-          };
-          products.push(newProduct);
-          renderProducts();
-        }
-        closeModal();
-      }
-
-      // Navegación
-      function showSection(sectionId) {
-        document
-          .querySelectorAll(".section")
-          .forEach((sec) => (sec.style.display = "none"));
-        document.getElementById(sectionId).style.display = "block";
-        if (window.innerWidth <= 768) toggleSidebar(false);
-        if (sectionId === "users") renderUsers();
-        if (sectionId === "products") renderProducts();
-      }
-
-      function toggleSidebar(forceState) {
-        const sidebar = document.getElementById("sidebar");
-        if (forceState === false) sidebar.classList.remove("open");
-        else sidebar.classList.toggle("open");
-      }
-
-      // Iniciar en dashboard
-      showSection("dashboard");
-    </script>
+    <script src="scripts/administrador.js"></script>
   </body>
 </html>
