--- a/pagina_Prin/LoginUsuario.html
+++ b/pagina_Prin/LoginUsuario.html
@@ -6,7 +6,7 @@
     <title>Inicio de Sesión</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"/>
-    <link rel="stylesheet" href="Scripts/styles.css" />
+    <link rel="stylesheet" href="style/style.css" />
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   </head>
   <body>
@@ -36,7 +36,7 @@
                                 <input type="password" id="typePasswordX" class="form-control" required/>
                             </div>
                             <div class="d-grid mt-4">
-                                <button class="btn btn-primary btn-lg" type="submit">
+                                <button id="btnLogin" class="btn btn-primary btn-lg" type="button">
                                     Iniciar Sesión
                                 </button>
                             </div>
@@ -44,7 +44,7 @@
                         <div class="text-center mt-4">
                             <p class="mb-0">
                                 ¿No tiene una cuenta?
-                                <a href="#" class="fw-bold text-decoration-none">Regístrate!</a>
+                                <a href="Registro.html" class="fw-bold text-decoration-none">Regístrate!</a>
                             </p>
                         </div>
                     </div>
@@ -62,5 +62,6 @@
       });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="Scripts/administrador.js"></script>
   </body>
 </html>
